# mumble-releng-vcpkg

./: .gitignore  AUTHORS  CONTRIBUTORS  Get-MumbleDeps.ps1  LICENSE.header  README.md  add-zeroc_ice-port.patch  get-mumble_deps.sh  get-mumble_voip_deps.sh  get_murmur-deps.sh
helpers/ice-cmake/: CMakeLists.txt  CompileSlices.cmake
helpers/ice-cmake/cmake/: CompileSlice.cmake  CompileSlices.cmake  CreateSlicesOutputDir.cmake
helpers/ice-cmake/cpp/: CMakeLists.txt  CMakeLists.txt.in
helpers/ice-cmake/cpp/cmake/: ice_cpp_props.cmake  mc_compiler.cmake
helpers/ice-cmake/cpp/src/Glacier2/: CMakeLists.txt
helpers/ice-cmake/cpp/src/Glacier2CryptPermissionsVerifier/: CMakeLists.txt
helpers/ice-cmake/cpp/src/Glacier2Lib/: CMakeLists.txt
helpers/ice-cmake/cpp/src/Ice/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceBox/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceBridge/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceDB/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceDiscovery/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceGrid/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceLocatorDiscovery/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IcePatch2/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IcePatch2Lib/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceSSL/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceStorm/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceStormLib/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceUtil/: CMakeLists.txt
helpers/ice-cmake/cpp/src/IceXML/: CMakeLists.txt
helpers/ice-cmake/cpp/src/Slice/: CMakeLists.txt
helpers/ice-cmake/cpp/src/icegriddb/: CMakeLists.txt
helpers/ice-cmake/cpp/src/slice2cpp/: CMakeLists.txt
helpers/ice-cmake/slice/: CMakeLists.txt
helpers/ice-cmake/slice/Ice/: CMakeLists.txt
helpers/ice-cmake/src/: CMakeLists.txt
helpers/ice-cmake/src/Glacier2/: CMakeLists.txt
helpers/ice-cmake/src/Ice/: CMakeLists.txt
helpers/ice-cmake/src/IceBox/: CMakeLists.txt
helpers/ice-cmake/src/IceUtil/: CMakeLists.txt
helpers/ice-cmake/src/Slice/: CMakeLists.txt
helpers/ice-cmake/src/slice2cpp/: CMakeLists.txt
helpers/vcpkg/ports/mcpp/: CMakeLists.txt  CONTROL  portfile.cmake
helpers/vcpkg/ports/zeroc-ice/: CMakeLists.txt  CONTROL  portfile.cmake
helpers/vcpkg/ports/zeroc-ice/cmake/: CompileSlice.cmake  Slices.cmake
helpers/vcpkg/ports/zeroc-ice/cpp/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/cmake/: ice_cpp_props.cmake  ice_msvc_props.cmake  mc_compiler.cmake
helpers/vcpkg/ports/zeroc-ice/cpp/src/Glacier2/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/Glacier2CryptPermissionsVerifier/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/Glacier2Lib/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/Ice/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceBox/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceBridge/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceDB/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceDiscovery/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceGrid/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceGridLib/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceLocatorDiscovery/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IcePatch2/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IcePatch2Lib/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceSSL/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceStorm/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceStormLib/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceUtil/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/IceXML/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/Slice/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/icegriddb/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/iceserviceinstall/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/src/slice2cpp/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Common/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/application/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/attack/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/dynamicFiltering/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/override/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/router/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/sessionControl/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/sessionHelper/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/ssl/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Glacier2/staticFiltering/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/acm/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/adapterDeactivation/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/admin/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/ami/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/background/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/binding/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/checksum/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Ice/custom/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/IceGrid/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/IceStorm/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/IceUtil/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/cpp/test/Slice/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-ice/icebuilder/: CMakeLists.txt
helpers/vcpkg/ports/zeroc-mcpp/: CMakeLists.txt  CONTROL  portfile.cmake
helpers/vcpkg/triplets/community/: x86-windows-static-md.cmake
win-x64/: Create-MurmurBuildEnvWin_x64.ps1
win-x64/Helpers/: Check-LocalGitRepositoryExists.ps1  Manage-LocalGitRepository.ps1
(+32 files in other folders)
