add_library(ice-slices OBJECT)

set(ICE_SLICE_FILES
	BuiltinSequences.ice
	Communicator.ice
	CommunicatorF.ice
	Connection.ice
	ConnectionF.ice
	Current.ice
	Endpoint.ice
	EndpointF.ice
	EndpointTypes.ice
	FacetMap.ice
	Identity.ice
	ImplicitContext.ice
	ImplicitContextF.ice
	Instrumentation.ice
	InstrumentationF.ice
	LocalException.ice
	Locator.ice
	LocatorF.ice
	Logger.ice
	LoggerF.ice
	Metrics.ice
	ObjectAdapter.ice
	ObjectAdapterF.ice
	ObjectFactory.ice
	Plugin.ice
	PluginF.ice
	Process.ice
	ProcessF.ice
	Properties.ice
	PropertiesAdmin.ice
	PropertiesF.ice
	RemoteLogger.ice
	Router.ice
	RouterF.ice
	ServantLocator.ice
	ServantLocatorF.ice
	SliceChecksumDict.ice
	ValueFactory.ice
	Version.ice
)

set(GENERATED_ICE_SOURCES
	${CMAKE_CURRENT_BINARY_DIR}/BuiltinSequences.cpp
	${CMAKE_CURRENT_BINARY_DIR}/BuiltinSequences.h
	${CMAKE_CURRENT_BINARY_DIR}/BuiltinSequencesI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/BuiltinSequencesI.h
	${CMAKE_CURRENT_BINARY_DIR}/Communicator.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Communicator.h
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorF.h
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorFI.h
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/CommunicatorI.h
	${CMAKE_CURRENT_BINARY_DIR}/Connection.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Connection.h
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionF.h
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionFI.h
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ConnectionI.h
	${CMAKE_CURRENT_BINARY_DIR}/Current.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Current.h
	${CMAKE_CURRENT_BINARY_DIR}/CurrentI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/CurrentI.h
	${CMAKE_CURRENT_BINARY_DIR}/Endpoint.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Endpoint.h
	${CMAKE_CURRENT_BINARY_DIR}/EndpointF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/EndpointF.h
	${CMAKE_CURRENT_BINARY_DIR}/EndpointFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/EndpointFI.h
	${CMAKE_CURRENT_BINARY_DIR}/EndpointI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/EndpointI.h
	${CMAKE_CURRENT_BINARY_DIR}/EndpointTypes.cpp
	${CMAKE_CURRENT_BINARY_DIR}/EndpointTypes.h
	${CMAKE_CURRENT_BINARY_DIR}/EndpointTypesI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/EndpointTypesI.h
	${CMAKE_CURRENT_BINARY_DIR}/FacetMap.cpp
	${CMAKE_CURRENT_BINARY_DIR}/FacetMap.h
	${CMAKE_CURRENT_BINARY_DIR}/FacetMapI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/FacetMapI.h
	${CMAKE_CURRENT_BINARY_DIR}/Identity.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Identity.h
	${CMAKE_CURRENT_BINARY_DIR}/IdentityI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/IdentityI.h
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContext.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContext.h
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextF.h
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextFI.h
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ImplicitContextI.h
	${CMAKE_CURRENT_BINARY_DIR}/Instrumentation.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Instrumentation.h
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationF.h
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationFI.h
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/InstrumentationI.h
	${CMAKE_CURRENT_BINARY_DIR}/LocalException.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LocalException.h
	${CMAKE_CURRENT_BINARY_DIR}/LocalExceptionI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LocalExceptionI.h
	${CMAKE_CURRENT_BINARY_DIR}/Locator.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Locator.h
	${CMAKE_CURRENT_BINARY_DIR}/LocatorF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LocatorF.h
	${CMAKE_CURRENT_BINARY_DIR}/LocatorFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LocatorFI.h
	${CMAKE_CURRENT_BINARY_DIR}/LocatorI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LocatorI.h
	${CMAKE_CURRENT_BINARY_DIR}/Logger.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Logger.h
	${CMAKE_CURRENT_BINARY_DIR}/LoggerF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LoggerF.h
	${CMAKE_CURRENT_BINARY_DIR}/LoggerFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LoggerFI.h
	${CMAKE_CURRENT_BINARY_DIR}/LoggerI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/LoggerI.h
	${CMAKE_CURRENT_BINARY_DIR}/Metrics.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Metrics.h
	${CMAKE_CURRENT_BINARY_DIR}/MetricsI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/MetricsI.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapter.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapter.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterF.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterFI.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectAdapterI.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectFactory.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectFactory.h
	${CMAKE_CURRENT_BINARY_DIR}/ObjectFactoryI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ObjectFactoryI.h
	${CMAKE_CURRENT_BINARY_DIR}/Plugin.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Plugin.h
	${CMAKE_CURRENT_BINARY_DIR}/PluginF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PluginF.h
	${CMAKE_CURRENT_BINARY_DIR}/PluginFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PluginFI.h
	${CMAKE_CURRENT_BINARY_DIR}/PluginI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PluginI.h
	${CMAKE_CURRENT_BINARY_DIR}/Process.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Process.h
	${CMAKE_CURRENT_BINARY_DIR}/ProcessF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ProcessF.h
	${CMAKE_CURRENT_BINARY_DIR}/ProcessFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ProcessFI.h
	${CMAKE_CURRENT_BINARY_DIR}/ProcessI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ProcessI.h
	${CMAKE_CURRENT_BINARY_DIR}/Properties.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Properties.h
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesAdmin.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesAdmin.h
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesAdminI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesAdminI.h
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesF.h
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesFI.h
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/PropertiesI.h
	${CMAKE_CURRENT_BINARY_DIR}/RemoteLogger.cpp
	${CMAKE_CURRENT_BINARY_DIR}/RemoteLogger.h
	${CMAKE_CURRENT_BINARY_DIR}/RemoteLoggerI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/RemoteLoggerI.h
	${CMAKE_CURRENT_BINARY_DIR}/Router.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Router.h
	${CMAKE_CURRENT_BINARY_DIR}/RouterF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/RouterF.h
	${CMAKE_CURRENT_BINARY_DIR}/RouterFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/RouterFI.h
	${CMAKE_CURRENT_BINARY_DIR}/RouterI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/RouterI.h
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocator.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocator.h
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorF.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorF.h
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorFI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorFI.h
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ServantLocatorI.h
	${CMAKE_CURRENT_BINARY_DIR}/SliceChecksumDict.cpp
	${CMAKE_CURRENT_BINARY_DIR}/SliceChecksumDict.h
	${CMAKE_CURRENT_BINARY_DIR}/SliceChecksumDictI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/SliceChecksumDictI.h
	${CMAKE_CURRENT_BINARY_DIR}/ValueFactory.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ValueFactory.h
	${CMAKE_CURRENT_BINARY_DIR}/ValueFactoryI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/ValueFactoryI.h
	${CMAKE_CURRENT_BINARY_DIR}/Version.cpp
	${CMAKE_CURRENT_BINARY_DIR}/Version.h
	${CMAKE_CURRENT_BINARY_DIR}/VersionI.cpp
	${CMAKE_CURRENT_BINARY_DIR}/VersionI.h
)

set_source_files_properties(${GENERATED_ICE_SOURCES} PROPERTIES GENERATED TRUE)

target_sources(ice-slices
   PRIVATE
   ${GENERATED_ICE_SOURCES}
)

target_include_directories(ice-slices
   PRIVATE
   ${CMAKE_SOURCE_DIR}/cpp/include
   ${CMAKE_SOURCE_DIR}/cpp/src
   ${CMAKE_CURRENT_BINARY_DIR}
)

foreach(slice ${ICE_SLICE_FILES})
   get_filename_component(SLICE_NAME ${slice} NAME_WE)
   set(COMPILED_SLICES 
      ${SLICE_NAME}.h
      ${SLICE_NAME}.cpp
	)
	
   #function(CompileSlices slice2_bin slice_path ice_file slice_outputs output_dir)
	CompileSlices(${SLICE_COMPILER}
		${SLICE_DIR}
		${SLICE_DIR}/Ice/${slice}
		${COMPILED_SLICES}
	)
endforeach()
